Fix: Code auto overflow

--- a/css/default.css
+++ b/css/default.css
@@ -43,6 +43,7 @@ section.post p {
 
 pre {
     padding: 1em;
+    overflow-x: auto;
 }
 
 code, pre {
